--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,42 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+<beans:beans
+	xmlns="http://www.springframework.org/schema/mvc"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+	xmlns:beans="http://www.springframework.org/schema/beans"
+	xmlns:context="http://www.springframework.org/schema/context"
+	xsi:schemaLocation="http://www.springframework.org/schema/mvc https://www.springframework.org/schema/mvc/spring-mvc.xsd
+		http://www.springframework.org/schema/beans https://www.springframework.org/schema/beans/spring-beans.xsd
+		http://www.springframework.org/schema/context https://www.springframework.org/schema/context/spring-context.xsd">
 
-	<!-- The definition of the Root Spring Container shared by all Servlets 
-		and Filters -->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
-	</context-param>
+	<!-- DispatcherServlet Context: defines this servlet's request-processing 
+		infrastructure -->
 
-	<!-- Creates the Spring Container shared by all Servlets and Filters -->
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+	<!-- Enables the Spring MVC @Controller programming model -->
+	<annotation-driven />
 
-	<!-- Processes application requests -->
-	<servlet>
-		<servlet-name>appServlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
+	<!-- Handles HTTP GET requests for /resources/** by efficiently serving 
+		up static resources in the ${webappRoot}/resources directory -->
+	<resources mapping="/resources/**" location="/resources/" />
 
-	<servlet-mapping>
-		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+	<!-- Resolves views selected for rendering by @Controllers to .jsp resources 
+		in the /WEB-INF/views directory -->
+		
+	<!-- 
+		ViewResolver
+		- 컨트롤러가 뷰를 호출하는 시점에 개입
+		- 경로의 접두어/접미어 붙인다.	
+	-->
+	<beans:bean
+		class="org.springframework.web.servlet.view.InternalResourceViewResolver">
+		<beans:property name="prefix" value="/WEB-INF/views/" />
+		<beans:property name="suffix" value=".jsp" />
+	</beans:bean>
 
-</web-app>
+	<context:component-scan
+		base-package="com.test.java" />
 
+	
+	<!-- 컨트롤러를 스프링 빈으로 등록하기 -->
+	<beans:bean class="com.test.java.controller.Ex01Controller" 
+				name="/ex01.do" />
+	
+	 <!-- Bean name '/ex01.do' is already used in this <beans> element -->
+	<!-- <beans:bean class="com.test.java.controller.Ex02Controller" 
+				name="/ex02.do" /> -->
+				
+	<beans:bean class="com.test.java.model.SpringDAO" id="dao"></beans:bean>
+				
+	<beans:bean class="com.test.java.controller.Ex02Controller" 
+				name="/ex02.do">
+		<beans:constructor-arg ref="dao"></beans:constructor-arg>
+	</beans:bean>
 
-
-
-
-
-
-
+</beans:beans>
